# drft

./: .banditrc  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: build.yml
docs/: conf.py  index.rst
src/drft/: authentication.py  filters.py  filters.pyi  manage.py  models.py  secrets.py  serializers.py  signing.py  views.py
src/drft/contrib/drf_yasg/: pagination.py  swagger.py
src/drft/contrib/postgres/: fields.py  filters.py
tests/: conftest.py  settings.py  test_authentication.py  test_filters.py  test_signing.py  test_version.py
